--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "aos": "^2.3.4",
     "bootstrap-icons": "^1.11.3",
     "informat": "file:",
     "lucide-react": "^0.488.0",
